# Ironhide

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.alpine  README.md  ironhide-deployment-egress.yaml  ironhide-deployment-ingress.yaml  main.cpp
docker/: bootstrap.sh
src/: CMakeLists.txt  config.h.in  main.cpp  server.cpp  server.h  servertcp.cpp  servertcp.h  serverudp.cpp
src/classifier/: classifier.cpp  classifier.h
src/client/: client.h  clienttcp.cpp  clienttcp.h  clientudp.cpp  clientudp.h
src/db/: address.cpp  address.h  dbquery.cpp  dbquery.h
src/db/exceptions/: endpoint_not_found.cpp  endpoint_not_found.h  failure.cpp  failure.h  query_ambiguous.cpp  query_ambiguous.h
src/db/utils/: address.cpp  address.h  urlbuilder.cpp  urlbuilder.h
src/endpoint/: connectionentry.cpp  connectionentry.h  egress.cpp  egress.h  endpoint.cpp  endpoint.h  ingress.cpp  ingress.h
src/endpoint/utils/: ipheader.h  packetutils.cpp  packetutils.h  sfcfixedlengthheader.cpp  sfcfixedlengthheader.h  sfcheaderstruct.h  sfcutilities.cpp  sfcutilities.h
src/proxy/: bridge.cpp  bridge.h
src/server/: server.cpp  server.h  servertcp.cpp  servertcp.h  serverudp.cpp  serverudp.h
src/server/utils/: asynctaskexecutor.cpp  asynctaskexecutor.h  jsoncpp.h  threadpool.h
src/utils/: asynctaskexecutor.h  log.cpp  log.h  packetutils.cpp  packetutils.h
